[gd_scene load_steps=16 format=2]

[ext_resource path="res://content/weapons/obelisk/ObeliskShot.gd" type="Script" id=1]
[ext_resource path="res://content/sounds/Weapons/obelisk/lightning_down.wav" type="AudioStream" id=2]
[ext_resource path="res://content/weapons/obelisk/PreSparkSheet.png" type="Texture" id=3]
[ext_resource path="res://content/sounds/UI/ContinueGame.wav" type="AudioStream" id=4]
[ext_resource path="res://content/sounds/Weather/dome-strike.wav" type="AudioStream" id=5]

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 18, 18 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 18, 0, 18, 18 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 36, 0, 18, 18 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 54, 0, 18, 18 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 0, 18, 18, 18 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 18, 18, 18, 18 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 36, 18, 18, 18 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 54, 18, 18, 18 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=3]
radius = 20.0

[node name="ObeliskShot" type="Node2D"]
script = ExtResource( 1 )

[node name="Anticipation" type="AnimatedSprite" parent="."]
frames = SubResource( 12 )
frame = 2
playing = true

[node name="HitArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitArea"]
shape = SubResource( 3 )

[node name="LightningDown" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="AmmoLowShot" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
pitch_scale = 1.89

[node name="LastShot" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = 8.701

[connection signal="area_entered" from="HitArea" to="." method="_on_HitArea_area_entered"]
[connection signal="area_exited" from="HitArea" to="." method="_on_HitArea_area_exited"]
